GL/Projet_GL/src/test/deca/context/invalid/sansObjet/assign/float_to_int.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//    Erreur affichée: Incompatible assignment: expected int, got float
//

{
   int a;

   // Doit etre refuse.
   a = 3.5;
}
